letPoly/testcases/letPoly/ill-Typed/example8.lam
let id = lam x . x in isZero (id (true))